--- a/vue/src/assets/css/global.css
+++ b/vue/src/assets/css/global.css
@@ -9,3 +9,16 @@ body {
 a {
     text-decoration: none;
 }
+.line1 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.line2 {
+    word-break: break-all;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
